# datafusion-functions-financial

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
benches/: financial_functions.rs
examples/: basic_usage.rs  local_demo.rs  multi_asset_class_demo.rs  secure_polygon_integration.rs  validate.rs
sample_data/global_crypto/day_aggs_v1/2023/: 2023-01-15.csv
src/: lib.rs  streaming.rs
src/functions/: ema.rs  macd.rs  mod.rs  rsi.rs  sma.rs
src/polygon/: client.rs  config.rs  mod.rs  signals.rs  types.rs  validator.rs
