[package]
name = "datafusion-functions-financial"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Financial functions for Apache DataFusion"
license = "Apache-2.0"
repository = "https://github.com/yourusername/datafusion-functions-financial"
keywords = ["datafusion", "financial", "trading", "technical-analysis"]
categories = ["database", "finance"]

[dependencies]
datafusion = "42.0.0"
datafusion-expr = "42.0.0"
arrow = "52.0.0"
arrow-array = "52.0.0"
arrow-schema = "52.0.0"
async-trait = "0.1"
object_store = { version = "0.11.0", features = ["aws"] }
aws-config = "1.1.0"
aws-sdk-s3 = "1.14.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.3"
dotenv = "0.15"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }
flate2 = "1.0"
rand = "0.8"

[[bench]]
name = "financial_functions"
harness = false
